# pr-agent

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  RELEASE_NOTES.md  codecov.yml  index.html  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: code_coverage.yaml  pre-commit.yml
core-abilities/: index.html
core-abilities/agent_skills/: index.html
core-abilities/architecture/: index.html
core-abilities/compression_strategy/: index.html
core-abilities/dynamic_context/: index.html
core-abilities/fetching_ticket_context/: index.html
core-abilities/interactivity/: index.html
core-abilities/metadata/: index.html
core-abilities/mosaico/: index.html
core-abilities/self_reflection/: index.html
docker/: Dockerfile
docs/: mkdocs.yml
docs/docs/core-abilities/: architecture.md  fetching_ticket_context.md  mosaico.md
docs/docs/faq/: index.md
docs/docs/installation/: github.md
docs/docs/tools/: describe.md  improve.md  review.md
docs/docs/usage-guide/: automations_and_usage.md  configuration_options.md  configuration_reference.md
faq/: index.html
installation/: index.html
installation/azure/: index.html
installation/bitbucket/: index.html
installation/gitea/: index.html
installation/github/: index.html
installation/gitlab/: index.html
installation/locally/: index.html
installation/pr_agent/: index.html
overview/data_privacy/: index.html
pr_agent/: cli.py  custom_merge_loader.py  settings_validator.py
pr_agent/agent/: pr_agent.py
pr_agent/algo/: __init__.py  cli_args.py  diff_cache.py  git_patch_processing.py  markdown_render.py  output_repair.py  pr_processing.py  repo_context.py  token_handler.py  types.py  utils.py
pr_agent/algo/ai_handlers/: base_ai_handler.py  langchain_ai_handler.py  litellm_ai_handler.py  litellm_helpers.py  openai_ai_handler.py
pr_agent/git_providers/: __init__.py  azuredevops_provider.py  bitbucket_provider.py  bitbucket_server_provider.py  codecommit_client.py  codecommit_provider.py  gerrit_provider.py  git_provider.py  gitea_provider.py  github_hunk_validation.py  github_provider.py  github_sub_issues.py  gitlab_provider.py  local_git_provider.py  utils.py
pr_agent/log/: __init__.py
pr_agent/mosaico/: card.py  diff_provider.py  dispatch.py  executor.py  server.py
pr_agent/secret_providers/: aws_secrets_manager_provider.py
pr_agent/servers/: azuredevops_server_webhook.py  bitbucket_app.py  bitbucket_server_webhook.py  gitea_app.py  github_app.py  github_polling.py  gitlab_webhook.py  help.py  metrics.py
pr_agent/settings/: configuration.toml  pr_reviewer_prompts.toml
pr_agent/tools/: pr_add_docs.py  pr_code_suggestions.py  pr_comment_history.py  pr_config.py  pr_description.py  pr_generate_labels.py  pr_help_docs.py  pr_help_message.py  pr_line_questions.py  pr_questions.py  pr_reviewer.py  pr_similar_issue.py  pr_update_changelog.py  ticket_pr_compliance_check.py
scripts/: generate_config_reference.py
search/: search_index.json
summary/: index.html
tests/e2e_tests/: langchain_ai_handler.py  test_bitbucket_app.py  test_gitea_app.py  test_github_app.py  test_gitlab_webhook.py
tests/health_test/: main.py
tests/unittest/: lambda_webhook_helpers.py  test_aws_secrets_manager_provider.py  test_azure_devops_comment.py  test_azure_devops_parsing.py  test_azure_devops_provider.py  test_azuredevops_server_webhook_app.py  test_bitbucket_provider.py  test_bitbucket_server_provider.py  test_clip_tokens.py  test_config_loader_secrets.py  test_custom_merge_loader_security.py  test_degradation_counter.py  test_dependency_pins.py  test_diff_files_cache.py  test_extend_patch.py  test_extract_issue_from_branch.py  test_file_filter.py  test_fix_json_escape_char.py  test_gerrit_provider.py  test_gerrit_server_app.py  test_get_max_tokens.py  test_git_provider_contract.py  test_gitea_app_webhook.py  test_gitea_provider.py  test_github_lambda_webhook_app.py  test_github_polling.py  test_github_polling_app.py  test_github_provider_urls_and_diffs.py  test_github_sub_issues.py  test_gitlab_incremental.py  test_gitlab_lambda_webhook_app.py  test_gitlab_provider.py  test_gunicorn_config_app.py  test_help_messages.py  test_ignore_repositories.py  test_litellm_chat_completion_core.py  test_litellm_claude_extended_thinking.py  test_litellm_reasoning_effort.py  test_local_git_provider.py  test_markdown_ticket_output_core.py  (+21 more)
tools/: index.html
tools/add_docs/: index.html
tools/ask/: index.html
tools/describe/: index.html
tools/generate_labels/: index.html
tools/help/: index.html
tools/help_docs/: index.html
tools/improve/: index.html
tools/review/: index.html
tools/similar_issues/: index.html
tools/update_changelog/: index.html
usage-guide/: index.html
usage-guide/EXAMPLE_BEST_PRACTICE/: index.html
usage-guide/additional_configurations/: index.html
usage-guide/automations_and_usage/: index.html
usage-guide/changing_a_model/: index.html
usage-guide/configuration_options/: index.html
usage-guide/configuration_reference/: index.html
usage-guide/introduction/: index.html
usage-guide/mail_notifications/: index.html
