[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-agent"
version = "0.39.0"

authors = [
  { name = "QodoAI", email = "ofir.f@qodo.ai" },
]

maintainers = [
  { name = "Naor Peled", email = "me@naor.dev" },
  { name = "Ofir Friedman", email = "ofir.f@qodo.ai" },
]

description = "PR-Agent aims to help efficiently review and handle pull requests, by providing AI feedback and suggestions."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["AI", "Agents", "Pull Request", "Automation", "Code Review"]
license = { file = "LICENSE" }

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

# Optional features. Provider extras currently mirror pins that also ship in the
# base install (requirements.txt); they document the per-platform dependency
# groups so the base install can be slimmed down in a future major release.
# Keep versions in sync with requirements.txt.
[project.optional-dependencies]
gitlab = ["python-gitlab==8.3.0"]
bitbucket = ["atlassian-python-api==3.41.4"]
azure-devops = ["azure-devops==7.1.0b4", "azure-identity==1.25.0", "msrest==0.7.1"]
gitea = ["giteapy==1.0.8"]
aws = ["boto3==1.40.45"] # Bedrock, CodeCommit, Secrets Manager
gcp = [
  "google-cloud-aiplatform==1.154.0",
  'google-cloud-storage==2.10.0; python_version < "3.13"',
  'google-cloud-storage==3.12.0; python_version >= "3.13"',
]
# Enables pr_agent.algo.ai_handlers.langchain_ai_handler.LangChainOpenAIHandler
langchain = ["langchain==1.3.9", "langchain-core==1.4.6", "langchain-openai==1.1.14"]
# Enables Prometheus metrics on the webhook servers (monitoring.enable_metrics)
monitoring = ["prometheus-client==0.25.0"]

[project.urls]
"Homepage" = "https://github.com/the-pr-agent/pr-agent"
"Documentation" = "https://docs.pr-agent.ai/"
"Repository" = "https://github.com/the-pr-agent/pr-agent"
"Issues" = "https://github.com/the-pr-agent/pr-agent/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "pr_agent*",
] # include pr_agent and any sub-packages it finds under it.

[project.scripts]
pr-agent = "pr_agent.cli:run"

[tool.ruff]
line-length = 120

lint.select = [
  "E",    # Pyflakes
  "F",    # Pyflakes
  "B",    # flake8-bugbear
  "I001", # isort basic checks
  "I002", # isort missing-required-import
]

# First commit - only fixing isort
lint.fixable = [
  "I001", # isort basic checks
]

lint.unfixable = [
  "B", # Avoid trying to fix flake8-bugbear (`B`) violations.
]

lint.exclude = ["api/code_completions"]

# B008 is a deliberate style choice (Depends() defaults in FastAPI handlers).
# The remaining entries are a baseline of pre-existing findings so `ruff check`
# can gate new code (pre-commit); remove entries as they get burned down.
lint.ignore = [
  "B008",
  "E501", # line-too-long (pre-existing long lines)
  "E722", # bare-except (pervasive best-effort fallbacks; see bandit B110 note)
  "F841", # unused-variable (mostly `except ... as e` without use)
  "B904", # raise-without-from-inside-except
  "B007", # unused-loop-control-variable
  "B027", # empty-method-without-abstract-decorator (GitProvider optional hooks)
  "E402", # module-import-not-at-top-of-file (deliberate config-load ordering)
  "B905", # zip-without-explicit-strict
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "E402",
] # Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"pr_agent/tools/pr_similar_issue.py" = [
  "F821", # pinecone/pandas imports are optional deps, currently commented out in requirements
]
"tests/**" = [
  "B009", # getattr with constant is used deliberately in tests
  "B011", # assert False is idiomatic pytest style
  "B012", # return-in-finally in e2e polling loops
  "B017", # pytest.raises(Exception) is acceptable in tests
]

[tool.mypy]
# Gradual-typing baseline: pr_agent/algo and pr_agent/git_providers are checked, permissively.
# Run with: ./.venv/bin/mypy
# Tighten (more paths, fewer disabled codes) as modules get annotated.
files = ["pr_agent/algo", "pr_agent/git_providers"]
follow_imports = "silent"
ignore_missing_imports = true
no_strict_optional = true

[[tool.mypy.overrides]]
# Baseline exemptions for pre-existing findings; remove as they get fixed.
module = [
  "pr_agent.algo.git_patch_processing",
  "pr_agent.algo.pr_processing",
  "pr_agent.algo.ai_handlers.*",
]
disable_error_code = ["var-annotated", "assignment", "arg-type"]

[[tool.mypy.overrides]]
# Provider baseline: the vendor SDKs (PyGithub, python-gitlab, atlassian, azure)
# are untyped, which dominates attr-defined/assignment noise. Still catches
# syntax, name-defined, and call-arg errors. Burn down per module over time.
module = ["pr_agent.git_providers.*"]
disable_error_code = [
  "attr-defined",
  "assignment",
  "var-annotated",
  "override",
  "return-value",
  "arg-type",
]

[tool.bandit]
exclude_dirs = ["tests"]
# B101: assert usage (fine outside production asserts)
# B104: webhook servers intentionally bind 0.0.0.0 inside containers
# B105: flagged constants are env-var names / placeholders, not passwords
# B110: try/except/pass is used pervasively for best-effort fallbacks
# B310: extra-config urlopen validates allowed schemes before fetching
# B404/B603/B607: subprocess usage is fixed-args git commands, no shell
# B701: jinja2 templates render LLM prompts, not HTML - autoescape is irrelevant
skips = ["B101", "B104", "B105", "B110", "B310", "B404", "B603", "B607", "B701"]
tests = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--color=yes"
console_output_style = "progress"
